Refactor Methods and dependances injections.