@@ -4,22 +4,19 @@ import com.quiz.entities.Quiz;
 import com.quiz.repositories.QuizRepository;
 import com.quiz.services.QuestionClient;
 import com.quiz.services.QuizService;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class QuizServiceImpl implements QuizService {
 
-    private QuizRepository quizRepository;
+    private final QuizRepository quizRepository;
 
-    private QuestionClient questionClient;
-
-    public QuizServiceImpl(QuizRepository quizRepository, QuestionClient questionClient) {
-        this.quizRepository = quizRepository;
-        this.questionClient = questionClient;
-    }
+    private final QuestionClient questionClient;
 
     @Override
     public Quiz add(Quiz quiz) {
@@ -27,19 +24,18 @@ public class QuizServiceImpl implements QuizService {
     }
 
     @Override
-    public List<Quiz> get() {
+    public List<Quiz> getAllQuizs() {
         List<Quiz> quizzes = quizRepository.findAll();
 
-        List<Quiz> newQuizList = quizzes.stream().map(quiz -> {
+        //TODO: replace map by peek and see the difference.
+        return quizzes.stream().map(quiz -> {
             quiz.setQuestions(questionClient.getQuestionOfQuiz(quiz.getId()));
             return quiz;
-        }).collect(Collectors.toList());
-
-        return newQuizList;
+        }).toList();
     }
 
     @Override
-    public Quiz get(Long id) {
+    public Quiz getOneQuiz(Long id) {
 
         Quiz quiz = quizRepository.findById(id).orElseThrow(() -> new RuntimeException("Quiz not found"));
         quiz.setQuestions(questionClient.getQuestionOfQuiz(quiz.getId()));
